Modify init process, fix var replacement

--- a/conf/coda.toml
+++ b/conf/coda.toml
@@ -20,7 +20,7 @@ cmds = [
 name = "caddyfile"
 regex = ".*/Caddyfile$"
 cmds = [
-    ["caddy", "fmt", "{FILENAME}"]
+    ["caddy", "fmt", "--overwrite", "{FILENAME}"]
 ]
 
 [[ft]]
