--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,6 +2,7 @@
 version: '3'
 
 vars:
+  SOURCE_FOLDER: src
   APP_NAME:
     sh: pwd | grep -Po "[^/]+$"
   SOURCE_DIR:
@@ -20,8 +21,9 @@ tasks:
   build:
     desc: build binary using remote ghwfe script, requires curl
     cmds:
-      - cmd: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/go_build.sh
-          | bash
+      - cmd: |
+          export SOURCE_FOLDER={{.SOURCE_FOLDER}}
+          curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/go_build.sh | bash
 
   test:
     desc: run go tests
