--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,24 +20,33 @@ jobs:
           | bash
       - name: Install Go
         env:
-          TARGET_FOLDER: /home/runner/.local/bin
-        run: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/install_go.sh
+          TARGET_FOLDER: /home/runner/.local/go
+        run: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/go_install.sh
+          | bash
+      - name: Add packages in sub folders to GOROOT
+        env:
+          GOROOT: /home/runner/.local/go
+          SOURCE_FOLDER: src
+        run: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/go_add_sub_packages.sh
           | bash
       - name: Build
         env:
+          GOROOT: /home/runner/.local/go
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GO_BIN_PATH: /home/runner/.local/bin/go
-          # SOURCE_FOLDER: /home/runner
-          TARGET_FOLDER: build
+          # APP_NAME: binary_name
+          SOURCE_FOLDER: src
+          # TARGET_FOLDER: build
         run: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/go_build.sh
           | bash
       - name: Gzip assets
-        env:
-          BASE_DIR: build
-          # VERSION_COMMAND: date +%y.%m.%d
+        # env:
+        # SOURCE_FOLDER: build
+        # TARGET_FOLDER: /tmp/assets
+        # VERSION_COMMAND: date +%y.%m.%d
         run: curl -sL https://raw.githubusercontent.com/triole/ghwfe/master/sh/gzip_builds.sh
           | bash
-      - name: Upload release binaries
+      - if: ${{ !env.ACT }}
+        name: Upload release binaries
         uses: alexellis/upload-assets@0.3.0
         env:
           GITHUB_TOKEN: ${{ github.token }}
