--- a/examples/conf.yaml
+++ b/examples/conf.yaml
@@ -1,3 +1,4 @@
+---
 filetypes:
   - name: bash
     regex: ".*\\.sh$"
@@ -13,6 +14,12 @@ filetypes:
       - ["gofmt", "-w", "{{.filename}}"]
       - ["staticcheck", "{{.filename}}"]
       - ["go", "test", "-v"]
+
+- name: zone
+    regex: ".*\\.(zone)$"
+    cmds:
+      - ["dnsfmt", "{{.filename}}"]
+    write_stdout_to: "/asdasd/{{.filename}}"
 
 settings:
   ignore_list:
